[package]
name = "hledger-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.4.1"
chumsky = "1.0.0-alpha.7"

[[example]]
name = "cheatsheet"
path = "examples/cheatsheet.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
perf = "deny"
correctness = "deny"
complexity = "deny"
style = "deny"
pedantic = "deny"
